Busquedas en mantenedores
Añadí busquedas en:
- Eliminar_item
- Modificar_item
- Ajustar_item
- Modificar_empleado
- Modificar_vehiculo
- Consultar_vehiculo (tenía error visual)
- Eliminar_vehiculo
- Modificar_cliente
- Modificar_servicio

Agregué un resumen de lo que el profe dijo en el drive también, lo siento que haya subido tan tarde, la pega de la basura se pone más pesada en diciembre y enero por las festividades, tenía que ponerme al dia por la semana que había faltado y trataré de faltar la semana siguiente igual para ponerle full a la presentacion del 10, asi también, espero que tengamos pronto reunion con el profe. Nos vemos en 2018.

--- a/src/racadauto/Consultar_vehiculo.form
+++ b/src/racadauto/Consultar_vehiculo.form
@@ -53,10 +53,6 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jScrollPane1" max="32767" attributes="0"/>
-                          <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                              <Component id="JB_cancel" min="-2" max="-2" attributes="0"/>
-                          </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="JT_patente" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -84,6 +80,11 @@
                   </Group>
               </Group>
           </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="JB_cancel" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -106,9 +107,9 @@
                   <Component id="JT_paterno" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="JT_materno" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="181" max="32767" attributes="0"/>
-              <Component id="JB_cancel" min="-2" pref="35" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="JB_cancel" min="-2" pref="24" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
